--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -21,7 +21,13 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "BUILD_DATE", "\"${new Date().toString()}\""
         }
+
+        debug {
+            buildConfigField "String", "BUILD_DATE", "\"${new Date().toString()}\""
+        }
+
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
